Style game deck and fix stuck card bug

--- a/src/components/GameDeck/GameDeck.scss
+++ b/src/components/GameDeck/GameDeck.scss
@@ -2,24 +2,40 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex: 1;
+
+  &__cards {
+    position: relative;
+    height: 24rem;
+    width: 14rem;
+  }
 
   &__card {
     position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #fff;
     color: #000;
     border: 3px solid #000;
-    height: 11rem;
-    width: 8rem;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 1rem;
 
     &--back {
-      font-size: 1rem;
+      padding: 1rem;
+      font-size: 3rem;
       color: #fff;
       background-color: #000;
+    }
+
+    &--swiped {
+      display: none;
     }
   }
 }
