--- a/src/pages/PlayGamePage/PlayGamePage.scss
+++ b/src/pages/PlayGamePage/PlayGamePage.scss
@@ -1,4 +1,11 @@
+@use "../../styles/utils/mixins" as *;
+
 .deck-play-page {
+  @include inline-padding;
+  @include flex(column);
+  position: absolute;
+  top: 0;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
