--- a/src/styles/base/_resets.scss
+++ b/src/styles/base/_resets.scss
@@ -8,11 +8,4 @@
 body {
   margin: 0;
   font-family: sans-serif;
-  height: 100vh;
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
 }
